some edits on UI

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -51,7 +51,10 @@
     "7":"يوليو",
     "8":"اغسطس"
     },
+    "consttime":"يناير 2020",
     "devaddress": "امبابة شارع طلعت حرب مدينة العمال بجوار البرنس منزل 17 بلوك 22 , cairo",
+    "reportAProblem1": "!هل يوجد مشكلة في شحنتك؟",
+    "reportAProblem2": "إبلاغ عن مشكلة",
     "lang": "Ar"
   }
 }
