--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -52,6 +52,9 @@
     "7":"July",
     "8":"August"
     },
+    "consttime":"3 January 2020",
+    "reportAProblem1": "There is Any PRoblem?",
+    "reportAProblem2": "report problem",
     "lang": "ENG"
   }
 }
