edit ui navbar and pack ctx

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -19,19 +19,19 @@
     "Branch": {
       "nasrcity": "مدينة نصر"
     },
-    "PackageState": {
-      "TICKET_CREATED": "تم إنشاء الشحنة",
-      "PACKAGE_RECEIVED": "تم إستلام الشحنة من التاجر",
-      "OUT_FOR_DELIVERY": "الشحنة خرجت للتسليم",
-      "DELIVERED": "تم التسليم",
-      "NOT_YET_SHIPPED": "لم يتم الشحن",
-      "IN_TRANSIT": "ترانسيت",
-      "DELIVERY_FAILED": "فشل التسليم",
-      "DELIVERED_TO_SENDER": "تم التسليم للتاجر",
-      "WAITING_FOR_CUSTOMER_ACTION": "بانتظار استلام العميل",
-      "CANCELLED": "تم الالغاء",
-      "AVAILABLE_FOR_PICKUP": "جاهز للتسليم يدويا"
-    },
+
+    "TICKET_CREATED": "تم إنشاء الشحنة",
+    "PACKAGE_RECEIVED": "تم إستلام الشحنة من التاجر",
+    "OUT_FOR_DELIVERY": "الشحنة خرجت للتسليم",
+    "DELIVERED": "تم التسليم",
+    "NOT_YET_SHIPPED": "لم يتم الشحن",
+    "IN_TRANSIT": "ترانسيت",
+    "DELIVERY_FAILED": "فشل التسليم",
+    "DELIVERED_TO_SENDER": "تم التسليم للتاجر",
+    "WAITING_FOR_CUSTOMER_ACTION": "بانتظار استلام العميل",
+    "CANCELLED": "تم الالغاء",
+    "AVAILABLE_FOR_PICKUP": "جاهز للتسليم يدويا",
+
     "Days": {
       "sunday": "الاحد",
       "monday": "الاثنين",
@@ -42,19 +42,21 @@
       "saturday": "السبت"
     },
     "Months": {
-    "1":"يناير",
-    "2":"فبراير",
-    "3":"مارس",
-    "4":"إبريل",
-    "5":"مايو",
-    "6":"يونيو",
-    "7":"يوليو",
-    "8":"اغسطس"
+      "1": "يناير",
+      "2": "فبراير",
+      "3": "مارس",
+      "4": "إبريل",
+      "5": "مايو",
+      "6": "يونيو",
+      "7": "يوليو",
+      "8": "اغسطس"
     },
-    "consttime":"يناير 2020",
+    "consttime": "يناير 2020",
     "devaddress": "امبابة شارع طلعت حرب مدينة العمال بجوار البرنس منزل 17 بلوك 22 , cairo",
     "reportAProblem1": "!هل يوجد مشكلة في شحنتك؟",
     "reportAProblem2": "إبلاغ عن مشكلة",
-    "lang": "Ar"
+    "packagenum": "رقم الشحنة",
+    "lang": "Eng",
+    "follow": "تتبع"
   }
 }
